<resources>
    <string name="app_name" translatable="false">moodle</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_course_online">Course(online)</string>
    <string name="action_course_offline">Course(offline)</string>
    <string name="action_checkall">MarkAll</string>
    <string name="action_uncheckall">UnMarkAll</string>>
    <string name="action_save">Save</string>
</resources>
